--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width,initial-scale=10">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
      
@@ -97,7 +97,7 @@
                                                             <div class="position-relative">
                                                                   <div class="d-flex w-100 align-items-end justify-content-center position-absolute"
                                                                         style="top: 0; bottom: 0;">
-                                                                        <div class="px2bMI GizwIM w-100 pb-2"
+                                                                        <div class="px2bMI GizwIM w-100"
                                                                               style="color: rgb(255, 255, 255);">ส่งฟรี*
                                                                         </div>
                                                                   </div>
@@ -185,7 +185,7 @@
                                                             <div class="position-relative">
                                                                   <div class="d-flex w-100 align-items-end justify-content-center position-absolute"
                                                                         style="top: 0; bottom: 0;">
-                                                                        <div class="px2bMI GizwIM w-100 pb-2"
+                                                                        <div class="px2bMI GizwIM w-100"
                                                                               style="color: rgb(255, 255, 255);">ส่งฟรี*
                                                                         </div>
                                                                   </div>
@@ -248,7 +248,7 @@
                                                             <div class="position-relative">
                                                                   <div class="d-flex w-100 align-items-end justify-content-center position-absolute"
                                                                         style="top: 0; bottom: 0;">
-                                                                        <div class="px2bMI GizwIM w-100 pb-2"
+                                                                        <div class="px2bMI GizwIM w-100"
                                                                               style="color: rgb(255, 255, 255);">ส่งฟรี*
                                                                         </div>
                                                                   </div>
@@ -314,7 +314,7 @@
                                                       <div class="position-relative">
                                                             <div class="d-flex w-100 align-items-end justify-content-center position-absolute"
                                                                   style="top: 0; bottom: 0;">
-                                                                  <div class="px2bMI GizwIM w-100 pb-2"
+                                                                  <div class="px2bMI GizwIM w-100"
                                                                         style="color: rgb(255, 255, 255);">ร้านโค้ดคุ้ม
                                                                   </div>
                                                             </div>
@@ -391,7 +391,7 @@
                                                       <div class="position-relative">
                                                             <div class="d-flex w-100 align-items-end justify-content-center position-absolute"
                                                                   style="top: 0; bottom: 0;">
-                                                                  <div class="px2bMI GizwIM w-100 pb-2"
+                                                                  <div class="px2bMI GizwIM w-100"
                                                                         style="color: rgb(255, 255, 255);">ร้านโค้ดคุ้ม
                                                                   </div>
                                                             </div>
